<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">ThetaTechnolab</string>
	<string name="title_home">Home</string>
	<string name="title_dashboard">Dashboard</string>
	<string name="title_notifications">Notifications</string>

	<string name="label_emailpassword">Email/Password Authentication</string>
	<string name="loading">Loading…</string>
	<string name="sign_in">Sign In</string>
	<string name="create_account">Create Account</string>
	<string name="sign_out">Sign Out</string>
	<string name="verify">Verify</string>
	<string name="logout">Logout?</string>
	<string name="hint_email">Email</string>
	<string name="hint_password">Password</string>
    <string name="server_error">FireBase Server Error</string>
	<string name="no_internet_msg">Please check your internet connection</string>
</resources>