<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	style="@style/CustomRelativeLayout"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<ImageView
		android:id="@+id/imgLogo"
		style="@style/CustomLogoImageView"
		android:contentDescription="@string/app_name"/>


	<LinearLayout
		android:id="@+id/llEmailPassword"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_centerInParent="true"
		android:orientation="vertical">

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/ilEmail"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<EditText
				android:id="@+id/etEmail"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/hint_email"
				android:maxLines="1"
				android:inputType="textEmailAddress"/>

		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/ilPassword"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:passwordToggleEnabled="true">

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/etPassword"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/hint_password"
				android:maxLines="1"
				android:inputType="textPassword"/>

		</com.google.android.material.textfield.TextInputLayout>

	</LinearLayout>

	<LinearLayout
		android:id="@+id/llButtons"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/llEmailPassword"
		android:orientation="horizontal">

		<Button
			android:id="@+id/btnSignIn"
			style="?android:attr/button"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/sign_in"
			android:theme="@style/ThemeOverlay.MyDarkButton"/>

		<Button
			android:id="@+id/btnEmailCreate"
			style="?android:attr/button"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/create_account"
			android:theme="@style/ThemeOverlay.MyDarkButton"/>

	</LinearLayout>

	<!--<LinearLayout
		android:id="@+id/llSignOut"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/profile"
		android:orientation="horizontal"
		android:visibility="gone">

		<Button
			android:id="@+id/btnVerify"
			style="?android:attr/button"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/verify"
			android:theme="@style/ThemeOverlay.MyDarkButton"
			android:visibility="gone"/>

		<Button
			android:id="@+id/btnSignOut"
			style="?android:attr/button"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/sign_out"
			android:theme="@style/ThemeOverlay.MyDarkButton"/>

	</LinearLayout>-->

</RelativeLayout>